import 'package:polsl_nsi_engineering_thesis/object/Sensor.dart';

class Humidity extends Sensor {}
