import 'package:polsl_nsi_engineering_thesis/object/Sensor.dart';

class Moisture extends Sensor {
  List<Map<String, String>> ranges = <Map<String, String>>[];
}
