class Pump {
  bool aviable = false;

  bool working = false;

  bool auto = false;
  double autoMin = 1;
  double autoMax = 30;
}
