import 'package:polsl_nsi_engineering_thesis/object/Sensor.dart';

class Temperature extends Sensor {}
